# pos-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: READMD.md  product.csv
src/: Main.cpp
src/class/: Inventory.cpp  Product.cpp  READMD.md  SaleTransaction.cpp
src/function/: MainMenu.cpp  ManagerMenu.cpp  READMD.md  VendingMachineMenu.cpp
src/include/: READMD.md
src/include/class/: Inventory.hpp  Product.hpp  SaleTransaction.hpp
src/include/function/: Menu.hpp
test/: READMD.md
